--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; URL="https://dengxianga.github.io/RoboticHand/" />
+<meta http-equiv="refresh" content="0; URL='https://dengxianga.github.io/RoboticHand/'" />
